# iclean

./: README.md  bar.py  clean.py  foo.py  hack.py  handle.py  pyproject.toml
resources/: backup_test  bar.py  foo.py  hack.py
resources/nested/: bar.py  foo.py
