[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.2.0", "wheel"]

[project]
authors = [{name = "kaliv0"}]
description = "Import cleaner"
name = "iclean"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.0.1"

requires-python = ">=3.10"

[project.scripts]
iclean = "clean:main"